[tool.poetry]
name = "sandbox-test"
version = "0.1.0"
description = ""
authors = ["Dhairya Joshi <joshidhairaya2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
RestrictedPython = "^7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
